Add Search and Save Event
Add SearchView, add DatePickerFragment, add Mappers, add Database, save Events

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.eriksargsyan.eventplanner">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -19,6 +20,7 @@
         <activity
             android:name=".screens.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="stateHidden|adjustPan"
             android:theme="@style/Theme.EventPlanner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
